// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Colorpickr basic hex input adjusts value onBlur 1`] = `
<div
  className="colorpickr round inline-block bg-gray-faint w240 round px12 py12 txt-xs"
  key="1"
>
  <div
    className="flex-parent"
    key="2"
  >
    <div
      className="flex-child flex-child--no-shrink pb12 h120 w120 z1"
      key="3"
    >
      <XYControl
        isDark="dark"
        onChange={[Function]}
        theme={
          Object {
            "xyControl": "xy-control absolute z1 unselectable cursor-move",
            "xyControlContainer": "relative w-full h-full cursor-pointer",
            "xyControlDark": "xy-control-dark",
          }
        }
        x={0}
        xmax={100}
        y={100}
        ymax={100}
      >
        <RGBGradient
          active={false}
          color="r"
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientBHigh": "gradient-rgb gradient-b-high",
              "gradientBLow": "gradient-rgb gradient-b-low",
              "gradientGHigh": "gradient-rgb gradient-g-high",
              "gradientGLow": "gradient-rgb gradient-g-low",
              "gradientRHigh": "gradient-rgb gradient-r-high",
              "gradientRLow": "gradient-rgb gradient-r-low",
            }
          }
        />
        <RGBGradient
          active={false}
          color="g"
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientBHigh": "gradient-rgb gradient-b-high",
              "gradientBLow": "gradient-rgb gradient-b-low",
              "gradientGHigh": "gradient-rgb gradient-g-high",
              "gradientGLow": "gradient-rgb gradient-g-low",
              "gradientRHigh": "gradient-rgb gradient-r-high",
              "gradientRLow": "gradient-rgb gradient-r-low",
            }
          }
        />
        <RGBGradient
          active={false}
          color="b"
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientBHigh": "gradient-rgb gradient-b-high",
              "gradientBLow": "gradient-rgb gradient-b-low",
              "gradientGHigh": "gradient-rgb gradient-g-high",
              "gradientGLow": "gradient-rgb gradient-g-low",
              "gradientRHigh": "gradient-rgb gradient-r-high",
              "gradientRLow": "gradient-rgb gradient-r-low",
            }
          }
        />
        <HGradient
          active={true}
          hueBackground="#ff0000"
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientHue": "gradient-hue",
            }
          }
        />
        <SGradient
          active={false}
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientSaturation": "gradient-saturation",
            }
          }
        />
        <LGradient
          active={false}
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientLight": "gradient-light",
            }
          }
        />
      </XYControl>
      <div
        className="slider colormode-slider colormode-slider-h"
        key="4"
      >
        <input
          max={359}
          min={0}
          onChange={[Function]}
          style={Object {}}
          type="range"
          value={0}
        />
      </div>
      <div
        className="slider bg-tile bg-white"
        key="5"
      >
        <input
          max={100}
          min={0}
          onChange={[Function]}
          style={
            Object {
              "background": "linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,1))",
            }
          }
          type="range"
          value={100}
        />
      </div>
    </div>
    <div
      className="flex-child ml12"
      key="6"
    >
      <div
        className="toggle-group mb12 w-full"
        key="7"
      >
        <label
          className="toggle-container w-full"
          key="8"
        >
          <input
            checked={true}
            data-test="mode-hsl"
            name="toggle"
            onChange={[Function]}
            type="radio"
            value="hsl"
          />
          <div
            className="toggle txt-xs py0 round-full toggle--gray"
            key="9"
          >
            HSL
          </div>
        </label>
        <label
          className="toggle-container w-full"
          key="10"
        >
          <input
            checked={false}
            data-test="mode-rgb"
            name="toggle"
            onChange={[Function]}
            type="radio"
            value="rgb"
          />
          <div
            className="toggle txt-xs py0 round-full toggle--gray"
            key="11"
          >
            RGB
          </div>
        </label>
      </div>
      <div>
        <div
          className="mb3 flex-parent is-active"
          key="12"
        >
          <ModeInput
            checked={true}
            name=""
            onChange={[Function]}
            theme={
              Object {
                "modeInput": "cursor-pointer",
                "modeInputContainer": "flex-child flex-child--no-shrink flex-parent flex-parent--center-cross w24",
              }
            }
          />
          <HInput
            label="H"
            onChange={[Function]}
            theme={
              Object {
                "numberInput": "w-full pl18 pr3 input input--s txt-mono txt-xs bg-white",
                "numberInputContainer": "flex-child flex-child--grow relative",
                "numberInputLabel": "absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold",
              }
            }
            value={0}
          />
        </div>
        <div
          className="mb3 flex-parent"
          key="13"
        >
          <ModeInput
            checked={false}
            name=""
            onChange={[Function]}
            theme={
              Object {
                "modeInput": "cursor-pointer",
                "modeInputContainer": "flex-child flex-child--no-shrink flex-parent flex-parent--center-cross w24",
              }
            }
          />
          <SLAlphaInput
            label="S"
            onChange={[Function]}
            theme={
              Object {
                "numberInput": "w-full pl18 pr3 input input--s txt-mono txt-xs bg-white",
                "numberInputContainer": "flex-child flex-child--grow relative",
                "numberInputLabel": "absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold",
              }
            }
            value={0}
          />
        </div>
        <div
          className="mb3 flex-parent"
          key="14"
        >
          <ModeInput
            checked={false}
            name=""
            onChange={[Function]}
            theme={
              Object {
                "modeInput": "cursor-pointer",
                "modeInputContainer": "flex-child flex-child--no-shrink flex-parent flex-parent--center-cross w24",
              }
            }
          />
          <SLAlphaInput
            label="L"
            onChange={[Function]}
            theme={
              Object {
                "numberInput": "w-full pl18 pr3 input input--s txt-mono txt-xs bg-white",
                "numberInputContainer": "flex-child flex-child--grow relative",
                "numberInputLabel": "absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold",
              }
            }
            value={0}
          />
        </div>
      </div>
      <div
        className="mb3"
        key="15"
      >
        <SLAlphaInput
          label="α"
          onChange={[Function]}
          theme={
            Object {
              "numberInput": "w-full pl18 pr3 input input--s txt-mono txt-xs bg-white",
              "numberInputContainer": "flex-child flex-child--grow relative",
              "numberInputLabel": "absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold",
            }
          }
          value={100}
        />
      </div>
    </div>
  </div>
  <div
    className="flex-parent"
    key="16"
  >
    <div
      className="flex-child flex-child--no-shrink flex-parent"
      key="17"
    >
      <div
        className="bg-tile bg-white flex-child w60 h24 round-l clip border-r border--gray-faint"
        key="18"
      >
        <button
          className="w-full h-full txt-bold align-center color-transparent color-white-on-hover transition"
          key="19"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#000",
            }
          }
          title="Reset color"
        >
          Reset
        </button>
      </div>
      <div
        className="bg-tile bg-white flex-child w60 h24 round-r clip"
        key="20"
      >
        <div
          className="w-full h-full"
          key="21"
          style={
            Object {
              "backgroundColor": "rgba(0,0,0,1)",
            }
          }
        />
      </div>
    </div>
    <div
      className="flex-child flex-child--grow ml12 relative"
      key="22"
    >
      <label
        className="absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold"
        key="23"
      >
        #
      </label>
      <input
        className="w-full pl18 pr3 input input--s txt-mono txt-xs bg-white"
        data-test="hex-input"
        key="24"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="000"
      />
    </div>
  </div>
</div>
`;

exports[`Colorpickr basic hex input returns value onChange 1`] = `
<div
  className="colorpickr round inline-block bg-gray-faint w240 round px12 py12 txt-xs"
  key="1"
>
  <div
    className="flex-parent"
    key="2"
  >
    <div
      className="flex-child flex-child--no-shrink pb12 h120 w120 z1"
      key="3"
    >
      <XYControl
        isDark="dark"
        onChange={[Function]}
        theme={
          Object {
            "xyControl": "xy-control absolute z1 unselectable cursor-move",
            "xyControlContainer": "relative w-full h-full cursor-pointer",
            "xyControlDark": "xy-control-dark",
          }
        }
        x={0}
        xmax={100}
        y={100}
        ymax={100}
      >
        <RGBGradient
          active={false}
          color="r"
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientBHigh": "gradient-rgb gradient-b-high",
              "gradientBLow": "gradient-rgb gradient-b-low",
              "gradientGHigh": "gradient-rgb gradient-g-high",
              "gradientGLow": "gradient-rgb gradient-g-low",
              "gradientRHigh": "gradient-rgb gradient-r-high",
              "gradientRLow": "gradient-rgb gradient-r-low",
            }
          }
        />
        <RGBGradient
          active={false}
          color="g"
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientBHigh": "gradient-rgb gradient-b-high",
              "gradientBLow": "gradient-rgb gradient-b-low",
              "gradientGHigh": "gradient-rgb gradient-g-high",
              "gradientGLow": "gradient-rgb gradient-g-low",
              "gradientRHigh": "gradient-rgb gradient-r-high",
              "gradientRLow": "gradient-rgb gradient-r-low",
            }
          }
        />
        <RGBGradient
          active={false}
          color="b"
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientBHigh": "gradient-rgb gradient-b-high",
              "gradientBLow": "gradient-rgb gradient-b-low",
              "gradientGHigh": "gradient-rgb gradient-g-high",
              "gradientGLow": "gradient-rgb gradient-g-low",
              "gradientRHigh": "gradient-rgb gradient-r-high",
              "gradientRLow": "gradient-rgb gradient-r-low",
            }
          }
        />
        <HGradient
          active={true}
          hueBackground="#ff0000"
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientHue": "gradient-hue",
            }
          }
        />
        <SGradient
          active={false}
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientSaturation": "gradient-saturation",
            }
          }
        />
        <LGradient
          active={false}
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientLight": "gradient-light",
            }
          }
        />
      </XYControl>
      <div
        className="slider colormode-slider colormode-slider-h"
        key="4"
      >
        <input
          max={359}
          min={0}
          onChange={[Function]}
          style={Object {}}
          type="range"
          value={0}
        />
      </div>
      <div
        className="slider bg-tile bg-white"
        key="5"
      >
        <input
          max={100}
          min={0}
          onChange={[Function]}
          style={
            Object {
              "background": "linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,1))",
            }
          }
          type="range"
          value={100}
        />
      </div>
    </div>
    <div
      className="flex-child ml12"
      key="6"
    >
      <div
        className="toggle-group mb12 w-full"
        key="7"
      >
        <label
          className="toggle-container w-full"
          key="8"
        >
          <input
            checked={true}
            data-test="mode-hsl"
            name="toggle"
            onChange={[Function]}
            type="radio"
            value="hsl"
          />
          <div
            className="toggle txt-xs py0 round-full toggle--gray"
            key="9"
          >
            HSL
          </div>
        </label>
        <label
          className="toggle-container w-full"
          key="10"
        >
          <input
            checked={false}
            data-test="mode-rgb"
            name="toggle"
            onChange={[Function]}
            type="radio"
            value="rgb"
          />
          <div
            className="toggle txt-xs py0 round-full toggle--gray"
            key="11"
          >
            RGB
          </div>
        </label>
      </div>
      <div>
        <div
          className="mb3 flex-parent is-active"
          key="12"
        >
          <ModeInput
            checked={true}
            name=""
            onChange={[Function]}
            theme={
              Object {
                "modeInput": "cursor-pointer",
                "modeInputContainer": "flex-child flex-child--no-shrink flex-parent flex-parent--center-cross w24",
              }
            }
          />
          <HInput
            label="H"
            onChange={[Function]}
            theme={
              Object {
                "numberInput": "w-full pl18 pr3 input input--s txt-mono txt-xs bg-white",
                "numberInputContainer": "flex-child flex-child--grow relative",
                "numberInputLabel": "absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold",
              }
            }
            value={0}
          />
        </div>
        <div
          className="mb3 flex-parent"
          key="13"
        >
          <ModeInput
            checked={false}
            name=""
            onChange={[Function]}
            theme={
              Object {
                "modeInput": "cursor-pointer",
                "modeInputContainer": "flex-child flex-child--no-shrink flex-parent flex-parent--center-cross w24",
              }
            }
          />
          <SLAlphaInput
            label="S"
            onChange={[Function]}
            theme={
              Object {
                "numberInput": "w-full pl18 pr3 input input--s txt-mono txt-xs bg-white",
                "numberInputContainer": "flex-child flex-child--grow relative",
                "numberInputLabel": "absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold",
              }
            }
            value={0}
          />
        </div>
        <div
          className="mb3 flex-parent"
          key="14"
        >
          <ModeInput
            checked={false}
            name=""
            onChange={[Function]}
            theme={
              Object {
                "modeInput": "cursor-pointer",
                "modeInputContainer": "flex-child flex-child--no-shrink flex-parent flex-parent--center-cross w24",
              }
            }
          />
          <SLAlphaInput
            label="L"
            onChange={[Function]}
            theme={
              Object {
                "numberInput": "w-full pl18 pr3 input input--s txt-mono txt-xs bg-white",
                "numberInputContainer": "flex-child flex-child--grow relative",
                "numberInputLabel": "absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold",
              }
            }
            value={0}
          />
        </div>
      </div>
      <div
        className="mb3"
        key="15"
      >
        <SLAlphaInput
          label="α"
          onChange={[Function]}
          theme={
            Object {
              "numberInput": "w-full pl18 pr3 input input--s txt-mono txt-xs bg-white",
              "numberInputContainer": "flex-child flex-child--grow relative",
              "numberInputLabel": "absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold",
            }
          }
          value={100}
        />
      </div>
    </div>
  </div>
  <div
    className="flex-parent"
    key="16"
  >
    <div
      className="flex-child flex-child--no-shrink flex-parent"
      key="17"
    >
      <div
        className="bg-tile bg-white flex-child w60 h24 round-l clip border-r border--gray-faint"
        key="18"
      >
        <button
          className="w-full h-full txt-bold align-center color-transparent color-white-on-hover transition"
          key="19"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#000",
            }
          }
          title="Reset color"
        >
          Reset
        </button>
      </div>
      <div
        className="bg-tile bg-white flex-child w60 h24 round-r clip"
        key="20"
      >
        <div
          className="w-full h-full"
          key="21"
          style={
            Object {
              "backgroundColor": "rgba(0,0,0,1)",
            }
          }
        />
      </div>
    </div>
    <div
      className="flex-child flex-child--grow ml12 relative"
      key="22"
    >
      <label
        className="absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold"
        key="23"
      >
        #
      </label>
      <input
        className="w-full pl18 pr3 input input--s txt-mono txt-xs bg-white"
        data-test="hex-input"
        key="24"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="000"
      />
    </div>
  </div>
</div>
`;

exports[`Colorpickr basic renders 1`] = `
<div
  className="colorpickr round inline-block bg-gray-faint w240 round px12 py12 txt-xs"
  key="1"
>
  <div
    className="flex-parent"
    key="2"
  >
    <div
      className="flex-child flex-child--no-shrink pb12 h120 w120 z1"
      key="3"
    >
      <XYControl
        isDark="dark"
        onChange={[Function]}
        theme={
          Object {
            "xyControl": "xy-control absolute z1 unselectable cursor-move",
            "xyControlContainer": "relative w-full h-full cursor-pointer",
            "xyControlDark": "xy-control-dark",
          }
        }
        x={0}
        xmax={100}
        y={100}
        ymax={100}
      >
        <RGBGradient
          active={false}
          color="r"
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientBHigh": "gradient-rgb gradient-b-high",
              "gradientBLow": "gradient-rgb gradient-b-low",
              "gradientGHigh": "gradient-rgb gradient-g-high",
              "gradientGLow": "gradient-rgb gradient-g-low",
              "gradientRHigh": "gradient-rgb gradient-r-high",
              "gradientRLow": "gradient-rgb gradient-r-low",
            }
          }
        />
        <RGBGradient
          active={false}
          color="g"
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientBHigh": "gradient-rgb gradient-b-high",
              "gradientBLow": "gradient-rgb gradient-b-low",
              "gradientGHigh": "gradient-rgb gradient-g-high",
              "gradientGLow": "gradient-rgb gradient-g-low",
              "gradientRHigh": "gradient-rgb gradient-r-high",
              "gradientRLow": "gradient-rgb gradient-r-low",
            }
          }
        />
        <RGBGradient
          active={false}
          color="b"
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientBHigh": "gradient-rgb gradient-b-high",
              "gradientBLow": "gradient-rgb gradient-b-low",
              "gradientGHigh": "gradient-rgb gradient-g-high",
              "gradientGLow": "gradient-rgb gradient-g-low",
              "gradientRHigh": "gradient-rgb gradient-r-high",
              "gradientRLow": "gradient-rgb gradient-r-low",
            }
          }
        />
        <HGradient
          active={true}
          hueBackground="#ff0000"
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientHue": "gradient-hue",
            }
          }
        />
        <SGradient
          active={false}
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientSaturation": "gradient-saturation",
            }
          }
        />
        <LGradient
          active={false}
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientLight": "gradient-light",
            }
          }
        />
      </XYControl>
      <div
        className="slider colormode-slider colormode-slider-h"
        key="4"
      >
        <input
          max={359}
          min={0}
          onChange={[Function]}
          style={Object {}}
          type="range"
          value={0}
        />
      </div>
      <div
        className="slider bg-tile bg-white"
        key="5"
      >
        <input
          max={100}
          min={0}
          onChange={[Function]}
          style={
            Object {
              "background": "linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,1))",
            }
          }
          type="range"
          value={100}
        />
      </div>
    </div>
    <div
      className="flex-child ml12"
      key="6"
    >
      <div
        className="toggle-group mb12 w-full"
        key="7"
      >
        <label
          className="toggle-container w-full"
          key="8"
        >
          <input
            checked={true}
            data-test="mode-hsl"
            name="toggle"
            onChange={[Function]}
            type="radio"
            value="hsl"
          />
          <div
            className="toggle txt-xs py0 round-full toggle--gray"
            key="9"
          >
            HSL
          </div>
        </label>
        <label
          className="toggle-container w-full"
          key="10"
        >
          <input
            checked={false}
            data-test="mode-rgb"
            name="toggle"
            onChange={[Function]}
            type="radio"
            value="rgb"
          />
          <div
            className="toggle txt-xs py0 round-full toggle--gray"
            key="11"
          >
            RGB
          </div>
        </label>
      </div>
      <div>
        <div
          className="mb3 flex-parent is-active"
          key="12"
        >
          <ModeInput
            checked={true}
            name=""
            onChange={[Function]}
            theme={
              Object {
                "modeInput": "cursor-pointer",
                "modeInputContainer": "flex-child flex-child--no-shrink flex-parent flex-parent--center-cross w24",
              }
            }
          />
          <HInput
            label="H"
            onChange={[Function]}
            theme={
              Object {
                "numberInput": "w-full pl18 pr3 input input--s txt-mono txt-xs bg-white",
                "numberInputContainer": "flex-child flex-child--grow relative",
                "numberInputLabel": "absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold",
              }
            }
            value={0}
          />
        </div>
        <div
          className="mb3 flex-parent"
          key="13"
        >
          <ModeInput
            checked={false}
            name=""
            onChange={[Function]}
            theme={
              Object {
                "modeInput": "cursor-pointer",
                "modeInputContainer": "flex-child flex-child--no-shrink flex-parent flex-parent--center-cross w24",
              }
            }
          />
          <SLAlphaInput
            label="S"
            onChange={[Function]}
            theme={
              Object {
                "numberInput": "w-full pl18 pr3 input input--s txt-mono txt-xs bg-white",
                "numberInputContainer": "flex-child flex-child--grow relative",
                "numberInputLabel": "absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold",
              }
            }
            value={0}
          />
        </div>
        <div
          className="mb3 flex-parent"
          key="14"
        >
          <ModeInput
            checked={false}
            name=""
            onChange={[Function]}
            theme={
              Object {
                "modeInput": "cursor-pointer",
                "modeInputContainer": "flex-child flex-child--no-shrink flex-parent flex-parent--center-cross w24",
              }
            }
          />
          <SLAlphaInput
            label="L"
            onChange={[Function]}
            theme={
              Object {
                "numberInput": "w-full pl18 pr3 input input--s txt-mono txt-xs bg-white",
                "numberInputContainer": "flex-child flex-child--grow relative",
                "numberInputLabel": "absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold",
              }
            }
            value={0}
          />
        </div>
      </div>
      <div
        className="mb3"
        key="15"
      >
        <SLAlphaInput
          label="α"
          onChange={[Function]}
          theme={
            Object {
              "numberInput": "w-full pl18 pr3 input input--s txt-mono txt-xs bg-white",
              "numberInputContainer": "flex-child flex-child--grow relative",
              "numberInputLabel": "absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold",
            }
          }
          value={100}
        />
      </div>
    </div>
  </div>
  <div
    className="flex-parent"
    key="16"
  >
    <div
      className="flex-child flex-child--no-shrink flex-parent"
      key="17"
    >
      <div
        className="bg-tile bg-white flex-child w60 h24 round-l clip border-r border--gray-faint"
        key="18"
      >
        <button
          className="w-full h-full txt-bold align-center color-transparent color-white-on-hover transition"
          key="19"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#000",
            }
          }
          title="Reset color"
        >
          Reset
        </button>
      </div>
      <div
        className="bg-tile bg-white flex-child w60 h24 round-r clip"
        key="20"
      >
        <div
          className="w-full h-full"
          key="21"
          style={
            Object {
              "backgroundColor": "rgba(0,0,0,1)",
            }
          }
        />
      </div>
    </div>
    <div
      className="flex-child flex-child--grow ml12 relative"
      key="22"
    >
      <label
        className="absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold"
        key="23"
      >
        #
      </label>
      <input
        className="w-full pl18 pr3 input input--s txt-mono txt-xs bg-white"
        data-test="hex-input"
        key="24"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="000"
      />
    </div>
  </div>
</div>
`;

exports[`Colorpickr rgbValue renders 1`] = `
<div
  className="colorpickr round inline-block bg-gray-faint w240 round px12 py12 txt-xs"
  key="1"
>
  <div
    className="flex-parent"
    key="2"
  >
    <div
      className="flex-child flex-child--no-shrink pb12 h120 w120 z1"
      key="3"
    >
      <XYControl
        isDark="dark"
        onChange={[Function]}
        theme={
          Object {
            "xyControl": "xy-control absolute z1 unselectable cursor-move",
            "xyControlContainer": "relative w-full h-full cursor-pointer",
            "xyControlDark": "xy-control-dark",
          }
        }
        x={100}
        xmax={100}
        y={50}
        ymax={100}
      >
        <RGBGradient
          active={false}
          color="r"
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientBHigh": "gradient-rgb gradient-b-high",
              "gradientBLow": "gradient-rgb gradient-b-low",
              "gradientGHigh": "gradient-rgb gradient-g-high",
              "gradientGLow": "gradient-rgb gradient-g-low",
              "gradientRHigh": "gradient-rgb gradient-r-high",
              "gradientRLow": "gradient-rgb gradient-r-low",
            }
          }
        />
        <RGBGradient
          active={false}
          color="g"
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientBHigh": "gradient-rgb gradient-b-high",
              "gradientBLow": "gradient-rgb gradient-b-low",
              "gradientGHigh": "gradient-rgb gradient-g-high",
              "gradientGLow": "gradient-rgb gradient-g-low",
              "gradientRHigh": "gradient-rgb gradient-r-high",
              "gradientRLow": "gradient-rgb gradient-r-low",
            }
          }
        />
        <RGBGradient
          active={false}
          color="b"
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientBHigh": "gradient-rgb gradient-b-high",
              "gradientBLow": "gradient-rgb gradient-b-low",
              "gradientGHigh": "gradient-rgb gradient-g-high",
              "gradientGLow": "gradient-rgb gradient-g-low",
              "gradientRHigh": "gradient-rgb gradient-r-high",
              "gradientRLow": "gradient-rgb gradient-r-low",
            }
          }
        />
        <HGradient
          active={true}
          hueBackground="#00ffff"
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientHue": "gradient-hue",
            }
          }
        />
        <SGradient
          active={false}
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientSaturation": "gradient-saturation",
            }
          }
        />
        <LGradient
          active={false}
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientLight": "gradient-light",
            }
          }
        />
      </XYControl>
      <div
        className="slider colormode-slider colormode-slider-h"
        key="4"
      >
        <input
          max={359}
          min={0}
          onChange={[Function]}
          style={Object {}}
          type="range"
          value={180}
        />
      </div>
      <div
        className="slider bg-tile bg-white"
        key="5"
      >
        <input
          max={100}
          min={0}
          onChange={[Function]}
          style={
            Object {
              "background": "linear-gradient(to right, rgba(0,255,255,0), rgba(0,255,255,1))",
            }
          }
          type="range"
          value={50}
        />
      </div>
    </div>
    <div
      className="flex-child ml12"
      key="6"
    >
      <div
        className="toggle-group mb12 w-full"
        key="7"
      >
        <label
          className="toggle-container w-full"
          key="8"
        >
          <input
            checked={true}
            data-test="mode-hsl"
            name="toggle"
            onChange={[Function]}
            type="radio"
            value="hsl"
          />
          <div
            className="toggle txt-xs py0 round-full toggle--gray"
            key="9"
          >
            HSL
          </div>
        </label>
        <label
          className="toggle-container w-full"
          key="10"
        >
          <input
            checked={false}
            data-test="mode-rgb"
            name="toggle"
            onChange={[Function]}
            type="radio"
            value="rgb"
          />
          <div
            className="toggle txt-xs py0 round-full toggle--gray"
            key="11"
          >
            RGB
          </div>
        </label>
      </div>
      <div>
        <div
          className="mb3 flex-parent is-active"
          key="12"
        >
          <ModeInput
            checked={true}
            name=""
            onChange={[Function]}
            theme={
              Object {
                "modeInput": "cursor-pointer",
                "modeInputContainer": "flex-child flex-child--no-shrink flex-parent flex-parent--center-cross w24",
              }
            }
          />
          <HInput
            label="H"
            onChange={[Function]}
            theme={
              Object {
                "numberInput": "w-full pl18 pr3 input input--s txt-mono txt-xs bg-white",
                "numberInputContainer": "flex-child flex-child--grow relative",
                "numberInputLabel": "absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold",
              }
            }
            value={180}
          />
        </div>
        <div
          className="mb3 flex-parent"
          key="13"
        >
          <ModeInput
            checked={false}
            name=""
            onChange={[Function]}
            theme={
              Object {
                "modeInput": "cursor-pointer",
                "modeInputContainer": "flex-child flex-child--no-shrink flex-parent flex-parent--center-cross w24",
              }
            }
          />
          <SLAlphaInput
            label="S"
            onChange={[Function]}
            theme={
              Object {
                "numberInput": "w-full pl18 pr3 input input--s txt-mono txt-xs bg-white",
                "numberInputContainer": "flex-child flex-child--grow relative",
                "numberInputLabel": "absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold",
              }
            }
            value={100}
          />
        </div>
        <div
          className="mb3 flex-parent"
          key="14"
        >
          <ModeInput
            checked={false}
            name=""
            onChange={[Function]}
            theme={
              Object {
                "modeInput": "cursor-pointer",
                "modeInputContainer": "flex-child flex-child--no-shrink flex-parent flex-parent--center-cross w24",
              }
            }
          />
          <SLAlphaInput
            label="L"
            onChange={[Function]}
            theme={
              Object {
                "numberInput": "w-full pl18 pr3 input input--s txt-mono txt-xs bg-white",
                "numberInputContainer": "flex-child flex-child--grow relative",
                "numberInputLabel": "absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold",
              }
            }
            value={50}
          />
        </div>
      </div>
      <div
        className="mb3"
        key="15"
      >
        <SLAlphaInput
          label="α"
          onChange={[Function]}
          theme={
            Object {
              "numberInput": "w-full pl18 pr3 input input--s txt-mono txt-xs bg-white",
              "numberInputContainer": "flex-child flex-child--grow relative",
              "numberInputLabel": "absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold",
            }
          }
          value={50}
        />
      </div>
    </div>
  </div>
  <div
    className="flex-parent"
    key="16"
  >
    <div
      className="flex-child flex-child--no-shrink flex-parent"
      key="17"
    >
      <div
        className="bg-tile bg-white flex-child w60 h24 round-l clip border-r border--gray-faint"
        key="18"
      >
        <button
          className="w-full h-full txt-bold align-center color-transparent color-white-on-hover transition"
          key="19"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "rgba(0,255,255,0.5)",
            }
          }
          title="Reset color"
        >
          Reset
        </button>
      </div>
      <div
        className="bg-tile bg-white flex-child w60 h24 round-r clip"
        key="20"
      >
        <div
          className="w-full h-full"
          key="21"
          style={
            Object {
              "backgroundColor": "rgba(0,255,255,0.5)",
            }
          }
        />
      </div>
    </div>
    <div
      className="flex-child flex-child--grow ml12 relative"
      key="22"
    >
      <label
        className="absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold"
        key="23"
      >
        #
      </label>
      <input
        className="w-full pl18 pr3 input input--s txt-mono txt-xs bg-white"
        data-test="hex-input"
        key="24"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="0ff"
      />
    </div>
  </div>
</div>
`;

exports[`Colorpickr rgbValue renders 2`] = `
<div
  className="colorpickr round inline-block bg-gray-faint w240 round px12 py12 txt-xs"
  key="1"
>
  <div
    className="flex-parent"
    key="2"
  >
    <div
      className="flex-child flex-child--no-shrink pb12 h120 w120 z1"
      key="3"
    >
      <XYControl
        isDark="dark"
        onChange={[Function]}
        theme={
          Object {
            "xyControl": "xy-control absolute z1 unselectable cursor-move",
            "xyControlContainer": "relative w-full h-full cursor-pointer",
            "xyControlDark": "xy-control-dark",
          }
        }
        x={100}
        xmax={100}
        y={50}
        ymax={100}
      >
        <RGBGradient
          active={false}
          color="r"
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientBHigh": "gradient-rgb gradient-b-high",
              "gradientBLow": "gradient-rgb gradient-b-low",
              "gradientGHigh": "gradient-rgb gradient-g-high",
              "gradientGLow": "gradient-rgb gradient-g-low",
              "gradientRHigh": "gradient-rgb gradient-r-high",
              "gradientRLow": "gradient-rgb gradient-r-low",
            }
          }
        />
        <RGBGradient
          active={false}
          color="g"
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientBHigh": "gradient-rgb gradient-b-high",
              "gradientBLow": "gradient-rgb gradient-b-low",
              "gradientGHigh": "gradient-rgb gradient-g-high",
              "gradientGLow": "gradient-rgb gradient-g-low",
              "gradientRHigh": "gradient-rgb gradient-r-high",
              "gradientRLow": "gradient-rgb gradient-r-low",
            }
          }
        />
        <RGBGradient
          active={false}
          color="b"
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientBHigh": "gradient-rgb gradient-b-high",
              "gradientBLow": "gradient-rgb gradient-b-low",
              "gradientGHigh": "gradient-rgb gradient-g-high",
              "gradientGLow": "gradient-rgb gradient-g-low",
              "gradientRHigh": "gradient-rgb gradient-r-high",
              "gradientRLow": "gradient-rgb gradient-r-low",
            }
          }
        />
        <HGradient
          active={true}
          hueBackground="#00ffff"
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientHue": "gradient-hue",
            }
          }
        />
        <SGradient
          active={false}
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientSaturation": "gradient-saturation",
            }
          }
        />
        <LGradient
          active={false}
          opacityHigh={0}
          opacityLow={0}
          theme={
            Object {
              "gradient": "absolute top right bottom left",
              "gradientLight": "gradient-light",
            }
          }
        />
      </XYControl>
      <div
        className="slider colormode-slider colormode-slider-h"
        key="4"
      >
        <input
          max={359}
          min={0}
          onChange={[Function]}
          style={Object {}}
          type="range"
          value={180}
        />
      </div>
      <div
        className="slider bg-tile bg-white"
        key="5"
      >
        <input
          max={100}
          min={0}
          onChange={[Function]}
          style={
            Object {
              "background": "linear-gradient(to right, rgba(0,255,255,0), rgba(0,255,255,1))",
            }
          }
          type="range"
          value={50}
        />
      </div>
    </div>
    <div
      className="flex-child ml12"
      key="6"
    >
      <div
        className="toggle-group mb12 w-full"
        key="7"
      >
        <label
          className="toggle-container w-full"
          key="8"
        >
          <input
            checked={true}
            data-test="mode-hsl"
            name="toggle"
            onChange={[Function]}
            type="radio"
            value="hsl"
          />
          <div
            className="toggle txt-xs py0 round-full toggle--gray"
            key="9"
          >
            HSL
          </div>
        </label>
        <label
          className="toggle-container w-full"
          key="10"
        >
          <input
            checked={false}
            data-test="mode-rgb"
            name="toggle"
            onChange={[Function]}
            type="radio"
            value="rgb"
          />
          <div
            className="toggle txt-xs py0 round-full toggle--gray"
            key="11"
          >
            RGB
          </div>
        </label>
      </div>
      <div>
        <div
          className="mb3 flex-parent is-active"
          key="12"
        >
          <ModeInput
            checked={true}
            name=""
            onChange={[Function]}
            theme={
              Object {
                "modeInput": "cursor-pointer",
                "modeInputContainer": "flex-child flex-child--no-shrink flex-parent flex-parent--center-cross w24",
              }
            }
          />
          <HInput
            label="H"
            onChange={[Function]}
            theme={
              Object {
                "numberInput": "w-full pl18 pr3 input input--s txt-mono txt-xs bg-white",
                "numberInputContainer": "flex-child flex-child--grow relative",
                "numberInputLabel": "absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold",
              }
            }
            value={180}
          />
        </div>
        <div
          className="mb3 flex-parent"
          key="13"
        >
          <ModeInput
            checked={false}
            name=""
            onChange={[Function]}
            theme={
              Object {
                "modeInput": "cursor-pointer",
                "modeInputContainer": "flex-child flex-child--no-shrink flex-parent flex-parent--center-cross w24",
              }
            }
          />
          <SLAlphaInput
            label="S"
            onChange={[Function]}
            theme={
              Object {
                "numberInput": "w-full pl18 pr3 input input--s txt-mono txt-xs bg-white",
                "numberInputContainer": "flex-child flex-child--grow relative",
                "numberInputLabel": "absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold",
              }
            }
            value={100}
          />
        </div>
        <div
          className="mb3 flex-parent"
          key="14"
        >
          <ModeInput
            checked={false}
            name=""
            onChange={[Function]}
            theme={
              Object {
                "modeInput": "cursor-pointer",
                "modeInputContainer": "flex-child flex-child--no-shrink flex-parent flex-parent--center-cross w24",
              }
            }
          />
          <SLAlphaInput
            label="L"
            onChange={[Function]}
            theme={
              Object {
                "numberInput": "w-full pl18 pr3 input input--s txt-mono txt-xs bg-white",
                "numberInputContainer": "flex-child flex-child--grow relative",
                "numberInputLabel": "absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold",
              }
            }
            value={50}
          />
        </div>
      </div>
      <div
        className="mb3"
        key="15"
      >
        <SLAlphaInput
          label="α"
          onChange={[Function]}
          theme={
            Object {
              "numberInput": "w-full pl18 pr3 input input--s txt-mono txt-xs bg-white",
              "numberInputContainer": "flex-child flex-child--grow relative",
              "numberInputLabel": "absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold",
            }
          }
          value={50}
        />
      </div>
    </div>
  </div>
  <div
    className="flex-parent"
    key="16"
  >
    <div
      className="flex-child flex-child--no-shrink flex-parent"
      key="17"
    >
      <div
        className="bg-tile bg-white flex-child w60 h24 round-l clip border-r border--gray-faint"
        key="18"
      >
        <button
          className="w-full h-full txt-bold align-center color-transparent color-white-on-hover transition"
          key="19"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "hsla(180, 100%, 50%, 0.5)",
            }
          }
          title="Reset color"
        >
          Reset
        </button>
      </div>
      <div
        className="bg-tile bg-white flex-child w60 h24 round-r clip"
        key="20"
      >
        <div
          className="w-full h-full"
          key="21"
          style={
            Object {
              "backgroundColor": "rgba(0,255,255,0.5)",
            }
          }
        />
      </div>
    </div>
    <div
      className="flex-child flex-child--grow ml12 relative"
      key="22"
    >
      <label
        className="absolute top left bottom pl6 flex-parent flex-parent--center-cross color-gray-light txt-bold"
        key="23"
      >
        #
      </label>
      <input
        className="w-full pl18 pr3 input input--s txt-mono txt-xs bg-white"
        data-test="hex-input"
        key="24"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="0ff"
      />
    </div>
  </div>
</div>
`;
